--- a/finservfront/src/styles/login.css
+++ b/finservfront/src/styles/login.css
@@ -26,9 +26,11 @@ body {
 .login form {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .login input {
+  width: 100%;
   padding: 0.5rem;
   margin-bottom: 1rem;
   border: 1px solid #ccc;
@@ -36,6 +38,7 @@ body {
 }
 
 .login button {
+  width: 100%;
   padding: 0.7rem;
   background-color: #2980b9; /* Color alusivo a un banco */
   color: white;
