--- a/finservfront/src/styles/Footer.css
+++ b/finservfront/src/styles/Footer.css
@@ -1,30 +1,17 @@
-nav {
+footer {
     background-color: #2980b9; /* Color alusivo a un banco */
-    padding: 1rem;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra para el navbar */
-  }
-  
-  nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    margin: 0;
-    padding: 0;
-  }
-  
-  nav ul li {
-    margin: 0;
-  }
-  
-  nav ul li a {
     color: white;
-    text-decoration: none;
-    font-weight: bold;
-    padding: 0.5rem 1rem;
-    transition: background-color 0.3s ease; /* Transición suave para hover */
+    text-align: center;
+    padding: 0.5rem; /* Reduce el padding para hacer el footer menos grueso */
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1); /* Sombra para el footer */
+    z-index: 1000; /* Asegura que el footer esté por encima de otros elementos */
   }
   
-  nav ul li a:hover {
-    background-color: #1f6391; /* Color de fondo al pasar el ratón */
-    border-radius: 4px; /* Bordes redondeados para el efecto hover */
+  footer p {
+    margin: 0;
+    font-size: 1rem;
   }
