--- a/finservfront/src/styles/Footer.css
+++ b/finservfront/src/styles/Footer.css
@@ -1,17 +1,20 @@
 footer {
-    background-color: #2980b9; /* Color alusivo a un banco */
-    color: white;
-    text-align: center;
-    padding: 0.5rem; /* Reduce el padding para hacer el footer menos grueso */
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1); /* Sombra para el footer */
-    z-index: 1000; /* Asegura que el footer esté por encima de otros elementos */
-  }
-  
-  footer p {
-    margin: 0;
-    font-size: 1rem;
-  }
+  background-color: rgba(255, 255, 255, 0.8); /* Fondo similar al nav */
+  color: gray; 
+  padding: 0.2rem 0.4rem; /* Reduce el padding para hacerlo aún más pequeño */
+  box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1); /* Sombra para el footer */
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  text-align: center; /* Centra el texto dentro del footer */
+}
+
+footer p {
+  color: gray; 
+  font-weight: bold;
+  font-size: 0.8rem; /* Reduce el tamaño de la fuente */
+  margin: 0;
+  padding: 0.3rem 0.8rem; /* Reduce el padding del párrafo */
+}
