--- a/finservfront/src/styles/Profile.css
+++ b/finservfront/src/styles/Profile.css
@@ -1,19 +1,17 @@
 .profile {
     padding: 2rem;
-    background-color: #f0f2f5; /* Fondo claro para el perfil */
-    min-height: 100vh; /* Asegura que el perfil ocupe toda la altura de la ventana */
-    padding-top: 4rem; /* Añade margen superior para el navbar fijo */
-    padding-bottom: 4rem; /* Añade margen inferior para el footer fijo */
+    background-color: #f0f2f5;
+    min-height: 100vh; 
+    padding-top: 4rem; 
+    padding-bottom: 4rem; 
   }
   
   .cover-photo {
     width: 100%;
     height: 200px;
-    background-color: #1f6391;
     background-size: cover;
     background-position: center;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para la portada */
   }
   
   .profile-photo {
@@ -21,28 +19,28 @@
     height: 150px;
     border-radius: 50%;
     border: 4px solid #fff;
-    margin-top: -75px; /* Superpone la foto de perfil sobre la portada */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para la foto de perfil */
-    background-image: url('https://avatar.iran.liara.run/public/boy?username=Ash'); /* Imagen de perfil */
+    margin-top: -75px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-image: url('https://avatar.iran.liara.run/public/boy?username=Ash'); 
     background-size: cover;
     background-position: center;
   }
   
   .content {
     margin-top: 2rem;
-    max-width: 800px; /* Limita el ancho máximo del contenido */
+    max-width: 800px; 
     margin-left: auto;
     margin-right: auto;
     padding: 1rem;
-    background-color: #ffffff; /* Fondo blanco para el contenido */
+    background-color: #ffffff; 
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para el contenido */
-    text-align: center; /* Centra el texto */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    text-align: center; 
   }
   
   .profile-details {
     margin-top: 2rem;
-    text-align: left; /* Alinea el texto a la izquierda */
+    text-align: left;
   }
   
   .profile-item {
@@ -54,7 +52,7 @@
   .profile-item h2 {
     margin: 0;
     font-size: 1.2rem;
-    color: #2980b9; /* Color alusivo a un banco */
+    color: #2980b9; 
     flex: 1;
   }
   
@@ -65,8 +63,8 @@
     flex: 2;
   }
   
-  .edit-button {
-    background-color: #2980b9; /* Color del botón */
+  .edit-button, .save-button {
+    background-color: #2980b9; 
     color: white;
     border: none;
     padding: 0.5rem 1rem;
@@ -75,6 +73,15 @@
     transition: background-color 0.3s ease;
   }
   
-  .edit-button:hover {
-    background-color: #1f6391; /* Color del botón al pasar el ratón */
+  .edit-button:hover, .save-button:hover {
+    background-color: #1f6391;
+  }
+
+  .profile input,
+  .profile select {
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 1rem;
+    margin-right: 0.5rem;
   }
