--- a/finservfront/src/styles/NavBar.css
+++ b/finservfront/src/styles/NavBar.css
@@ -1,6 +1,6 @@
 nav {
   background-color: rgba(255, 255, 255, 0.8); 
-  padding: 0.7rem 1.5rem; /* Aumenta el padding para hacer el navbar más grande */
+  padding: 0.7rem 1.5rem; 
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
   width: 100%;
   position: fixed;
@@ -26,10 +26,43 @@ nav ul li a {
   text-decoration: none;
   font-weight: bold;
   padding: 1rem 2rem; 
-  transition: color 0.3s ease, background-color 0.3s ease; /* Transición para cambiar de color */
+  transition: color 0.3s ease, background-color 0.3s ease; 
 }
 
 nav ul li a:hover {
   color: black; 
   border-radius: 4px;
+}
+
+
+@media (max-width: 768px) {
+  nav {
+    padding: 0.5rem 1rem; 
+  }
+
+  nav ul {
+    flex-direction: column; 
+    align-items: center;
+  }
+
+  nav ul li a {
+    padding: 0.8rem 1.5rem; 
+  }
+}
+
+
+@media (max-width: 480px) {
+  nav {
+    padding: 0.3rem 0.5rem; 
+  }
+
+  nav ul {
+    flex-direction: column; 
+    justify-content: center;
+  }
+
+  nav ul li a {
+    padding: 0.6rem 1rem; 
+    font-size: 0.9rem; 
+  }
 }
