--- a/finservfront/src/styles/login.css
+++ b/finservfront/src/styles/login.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #2c3e50; /* Fondo oscuro */
+  background-color: #2c3e50; 
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,7 +12,7 @@ body {
   max-width: 400px;
   width: 100%;
   padding: 2rem;
-  background-color: #ecf0f1; /* Color alusivo a un banco */
+  background-color: #ecf0f1; 
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -20,7 +20,7 @@ body {
 .login h1 {
   text-align: center;
   margin-bottom: 1.5rem;
-  color: #2980b9; /* Color alusivo a un banco */
+  color: #2980b9;
 }
 
 .login form {
@@ -40,7 +40,7 @@ body {
 .login button {
   width: 100%;
   padding: 0.7rem;
-  background-color: #2980b9; /* Color alusivo a un banco */
+  background-color: #2980b9; 
   color: white;
   border: none;
   border-radius: 4px;
@@ -48,10 +48,54 @@ body {
 }
 
 .login button:hover {
-  background-color: #1f6391; /* Color alusivo a un banco */
+  background-color: #1f6391; 
 }
-.register-link{
+
+.register-link {
   margin-top: 0.5rem;
   color: #1f6391;
   text-decoration: none;
+}
+
+@media (max-width: 768px) {
+  .login {
+    width: 80%; 
+    padding: 1.5rem; 
+  }
+
+  .login h1 {
+    font-size: 1.8rem; 
+  }
+
+  .login input {
+    padding: 0.4rem; 
+  }
+
+  .login button {
+    padding: 0.6rem;
+  }
+}
+
+
+@media (max-width: 480px) {
+  .login {
+    width: 100%; 
+    padding: 1rem; 
+  }
+
+  .login h1 {
+    font-size: 1.5rem; 
+  }
+
+  .login input {
+    padding: 0.3rem; 
+  }
+
+  .login button {
+    padding: 0.5rem; 
+  }
+
+  .register-link {
+    font-size: 0.9rem; 
+  }
 }
